--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,12 @@ dependencies = [
     "pyside6==6.9.2",
     "pyside6-addons==6.9.2",
     "pyside6-essentials==6.9.2",
+    "pytest>=8.4.2",
+    "ruff>=0.14.0",
     "shiboken6==6.9.2",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.0",
 ]
